[package]
name = "arti_whois"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arti-client = "0.8.0"
futures = "0.3.25"
reqwest = { version = "0.11.10", features = ["stream"] }
tls-api = { version = "0.7.0", features = ["runtime-tokio"] }
tls-api-native-tls = { version = "0.7.0", features = ["runtime-tokio"] }
tokio = { version = "1.18.0", features = ["full"] }
tokio-stream = "0.1.8"