[package]
name = "actix-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.0"
chrono = "0.4.31"
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"

[profile.release]
strip = true
