[package]
name = "actix-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.9.0"
chrono = "0.4.40"
serde = "1.0.218"
serde_derive = "1.0.218"
serde_json = "1.0.140"

[profile.release]
strip = true
