[package]
name = "arti_whois"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arti-client = { version = "0.25.0", features = ["tokio", "native-tls", "static-sqlite"] }
futures = "0.3.31"
tokio = { version = "1.40.0", features = ["full"] }
tor-rtcompat = "0.25.0"
warp = "0.3.3"
lazy_static = "1.4.0"
chrono = "0.4.23"

[profile.release]
strip = true
