[package]
name = "axum-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.0"
chrono = "0.4.23"
serde = "1.0.147"
serde_derive = "1.0.147"
tokio = {version= "1.22.0", features = ["full"] }

[profile.release]
strip = true