[package]
name = "axum-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.1"
chrono = "0.4.31"
serde = "1.0.193"
serde_derive = "1.0.193"
tokio = {version= "1.34.0", features = ["full"] }

[profile.release]
strip = true
