[package]
name = "axum-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.1"
chrono = "0.4.40"
serde = "1.0.218"
serde_derive = "1.0.218"
tokio = {version= "1.43.0", features = ["full"] }

[profile.release]
strip = true
