[package]
name = "download_upload"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.2"
bytes = "1.1.0"
futures-util = "0.3.17"
indicatif = "0.16.2"
reqwest = { version = "0.11.6", features = ["stream"] }
tokio = { version = "1.12.0", features = ["full"] }
tokio-util = "0.6.9"