[package]
name = "rocket-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
log = { version = "0.4", features = ["release_max_level_off"] }
chrono = "0.4.40"

[profile.release]
strip = true
