[package]
name = "warp-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
tokio = {version="1.17.0" , features=["full"]}
warp = "0.3.2"

[profile.release]
strip = true