[package]
name = "warp-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.40"
serde = "1.0.218"
serde_derive = "1.0.218"
serde_json = "1.0.140"
tokio = {version="1.43.0" , features=["full"]}
warp = "0.3.7"

[profile.release]
strip = true
