[package]
name = "websocket_echo_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
tokio-tungstenite = "*"
log = "*"
env_logger = "*"
futures-util = "0.3.26"
regex = "1.7.1"
